[workspace]
members = [
  "crates/owoauth",
  "crates/owoauth-tower",
  "crates/owoauth-axum",
  "examples/axum",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

authors = ["icanwalkonwater <lucas.malandrino@gmail.com>"]
description = "OAuth compliant server and client"
keywords = []
categories = []
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://github.com/icanwalkonwater/owoauth"
repository = "https://github.com/icanwalkonwater/owoauth"
