[package]
name = "examples_axum"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owoauth = { path = "../../crates/owoauth" }

axum = "0.6.19"
tracing-subscriber = "0.3.17"
tokio = { version = "1.29.1", features = [
  "macros",
  "tracing",
  "rt-multi-thread",
] }
tower-http = { version = "0.4.3", features = ["tracing", "trace"] }
tracing = { version = "0.1.37", features = ["async-await"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_qs = { version = "0.12.0", features = ["axum", "tracing"] }
